<?xml version="1.0" encoding="utf-8"?>
<!--Die Datei ist in Pair-Programming entstanden.
    Authoren des Codes: Johannes Belaschow, Berkan Yildiz -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_hintergrund"
    tools:context=".add.AddReisemittelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ArtDerAktivitaet"
                android:layout_margin="8dp"
                >
            </TextView>
            <Spinner
                android:id="@+id/spinner_aktivitaetstyp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Uhrzeit"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                >
            </TextView>

            <NumberPicker
                android:id="@+id/numberpicker_aktivitaet_uhrzeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bewertung"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                >
            </TextView>

            <NumberPicker
                android:id="@+id/numberpicker_aktivitaet_bewertung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp">
            </NumberPicker>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/Kosten">
            </TextView>

            <EditText
                android:id="@+id/edit_text_aktivitaet_kosten"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:inputType="number"
                android:hint="@string/KostenEingeben">
            </EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/Beschreibung">
            </TextView>

            <EditText
                android:id="@+id/edit_text_aktivitaet_beschreibung"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/BeschreibungDerAktivitaet">
            </EditText>


        </LinearLayout>



    </LinearLayout>




</RelativeLayout>