<?xml version="1.0" encoding="utf-8"?>
<!--Die Datei ist in Pair-Programming entstanden.
    Authoren des Codes: Johannes Belaschow, Berkan Yildiz -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_hintergrund"
    tools:context=".add.AddReisemittelActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReisemittelTyp"
                android:layout_margin="8dp"
                >
            </TextView>
            <Spinner
                android:id="@+id/spinner_reisemittel_typ"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/Kosten">
            </TextView>

            <EditText
                android:id="@+id/edit_text_reisemittel_kosten"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:inputType="number"
                android:hint="@string/KostenEingeben">
            </EditText>



        </LinearLayout>

    </LinearLayout>




</RelativeLayout>